# furunushi

./: .gitignore  README.md  angular.json  package-lock.json  package.json
.github/workflows/: publish-to-auto-release.yml  publish.yml  test.yml
src/: styles.scss
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  _tauri.macos.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main-copy.rs  main.rs
src-tauri/src/drone/: commands.rs  mod.rs  organ.rs  sine.rs  state.rs
src-tauri/src/pd/: commands.rs  mod.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
src/app/bindings/: Chord.ts  Drone.ts  Instrument.ts  Note.ts  NoteName.ts  NoteNameIdx.ts
src/app/component/deviation/: deviation.component.html  deviation.component.scss  deviation.component.ts
src/app/component/nav/: nav.component.html  nav.component.scss  nav.component.ts
src/app/component/note/: note.component.html  note.component.scss  note.component.ts
src/app/component/note-input/: note-input.component.html  note-input.component.scss  note-input.component.ts
src/app/page/drone/: drone.component.html  drone.component.scss  drone.component.ts
src/app/page/mirror/: mirror.component.html  mirror.component.scss  mirror.component.ts
src/app/page/tuner/: tuner.component.html  tuner.component.scss  tuner.component.ts
src/app/service/: drone.service.ts  tuner.service.ts  tuning.service.ts
src/app/tools/: listen.ts
