[package]
name = "furunushi"
version = "0.1.0"
description = "A Tauri App"
authors = ["fullpipe"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "furunushi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pitch-detection = "0.3.0"
tauri-plugin-log = "2"
log = "0.4.26"
anyhow = "1.0.97"
cpal = "0.15"
crossbeam = "0.8.4"
env_logger = "0.11.7"
ringbuffer = "0.15.0"
ts-rs = "10.1.0"
tauri-plugin-store = "2"
fundsp = "0.20.0"
assert_no_alloc = "1.1.2"
avfaudio = "0.0.3"
tauri-plugin-os = "2"
